manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-dev.local
    http:
      paths:
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
